# cygwin

./: .gitattributes  CLAUDE.md  README.md
.github/workflows/: cygwin.yml  update-deps.yml
constitutional-reflective-system/: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  docker-compose.yml  pyproject.toml
scripts/: update-check.sh
scripts/windows/: ai-tools-config.sh  cloud-storage.sh  self-update.sh  setup-windows.ps1  vscode-integration.sh  wintools-detect.sh
