[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crs"
version = "0.1.0"
description = "Constitutional Reflective System - Governed Recursive Self-Improvement"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "CRS Contributors" },
]
keywords = ["ai", "self-improvement", "constitutional", "governance", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Web framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  # Data validation
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  # Database
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  # HTTP client
  "httpx>=0.27.0",
  # LLM providers
  "openai>=1.30.0",
  "anthropic>=0.29.0",
  # CLI
  "typer[all]>=0.12.0",
  # Logging
  "structlog>=24.2.0",
  "rich>=13.7.0",
  # Utilities
  "python-dotenv>=1.0.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "factory-boy>=3.3.0",
  "respx>=0.21.0",
  # Type checking
  "mypy>=1.10.0",
  "types-passlib",
  "types-python-jose",
  # Linting / formatting
  "ruff>=0.4.0",
]

[project.scripts]
crs = "crs.cli:app"

[tool.setuptools]
packages = { find = { where = ["packages"], namespaces = false } }

[tool.setuptools.package-dir]
"" = "packages"

[tool.setuptools.package-data]
"*" = ["py.typed"]

# ------------------------------------------------------------
# Ruff
# ------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "N",   # pep8-naming
]
ignore = [
  "ANN101",  # missing-type-self
  "ANN102",  # missing-type-cls
  "ANN401",  # dynamically-typed-expressions (any)
  "B008",    # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]
"packages/*/migrations/**" = ["ANN"]

# ------------------------------------------------------------
# Mypy
# ------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ------------------------------------------------------------
# Pytest
# ------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ------------------------------------------------------------
# Coverage
# ------------------------------------------------------------
[tool.coverage.run]
source = ["packages"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
